--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -21,7 +21,7 @@ hr {
     display: none;
     border: none;
     color: var(--color_primary);
-    background-color: var(--color_primary_light);
+    background-color: var(--color_accent_light);
     width: 100%;
     height: 0.1rem;
     margin: 0 0 0.25rem 0;
@@ -42,7 +42,7 @@ hr.active {
 }
 
 .plotly_div {
-    background: var(--color_secondary);
+    background: var(--secondary2);
     height: 30rem;
     width: 60rem;
     max-width: 100%;
@@ -79,24 +79,23 @@ form span:not(:first-child) {
 
 .chart_rectangle {
     display: inline-block;
-    background: var(--color_secondary);
-    color: var(--color_text_dark_on_secondary);
+    background: var(--secondary2);
     padding: 0.25rem;
     margin-top: 0.25rem;
     margin-right: 0.25rem;
-    border: 0.1rem solid var(--color_border);
+    border: 0.1rem solid var(--secondary4);
     transition: 0.3s;
     outline: none;
 }
 
 .chart_rectangle:hover {
-    border-color: var(--color_primary_light);
+    border-color: var(--accent2);
     transition: 0.3s;
     cursor: pointer;
 }
 
 .chart_rectangle.active {
-    border-color: var(--color_primary);
+    border-color: var(--accent);
     transition: 0.3s;
 }
 
@@ -104,9 +103,9 @@ form span:not(:first-child) {
     display: none;
     margin-top: 0.25rem;
     width: 100%;
-    border: 0.1rem solid var(--color_border);
+    border: 0.1rem solid var(--secondary4);
     overflow: hidden;
-    background: var(--color_secondary);
+    background: var(--secondary2);
 }
 
 .chart_settings.active {
@@ -184,10 +183,10 @@ form span:not(:first-child) {
 }*/
 
 .chart_stuff div.header {
-    background: var(--color_secondary_dark);
+    background: var(--secondary3);
     flex: 1;
     padding: 0.15rem 0.25rem;
-    border: 0.1rem solid var(--color_border);
+    border: 0.1rem solid var(--secondary4);
     border-right: 0;
 }
 
