--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -43,8 +43,10 @@ hr.active {
 
 .plotly_div {
     background: var(--secondary2);
-    height: 30rem;
-    width: 60rem;
+    /*height: 30rem;
+    width: 60rem;*/
+    height: 10rem;
+    width: 10rem;
     max-width: 100%;
     align-self: center;
 }
@@ -226,3 +228,19 @@ form span:not(:first-child) {
     opacity: 100%;
     transition: 0.2s;
 }
+
+th.invisible_cell {
+    opacity: 0%;
+    border-top-color: var(--secondary2);
+    border-left-color: var(--secondary2);
+}
+
+th.invisible_cell:not(.last) {
+    border-right-color: var(--secondary2);
+}
+
+th.imitation_row_control div {
+    display: flex;
+    justify-content: center;
+}
+
