--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -116,12 +116,12 @@ form span:not(:first-child) {
 
 .chart_settings .chart_data {
     overflow-y: auto;
-    max-height: 30rem;
+    max-height: 50rem;
 }
 
 .chart_settings .chart_stuff {
     margin-left: 0.25rem;
-    max-height: 30rem;
+    max-height: 50rem;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -241,5 +241,9 @@ th.invisible_cell:not(.last) {
 th.imitation_row_control div {
     display: flex;
     justify-content: center;
+}
+
+.imitation_div .im_plotly_div {
+    width: 100%;
 }
 
