--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -188,12 +188,12 @@ footer a:hover {
     font-size: 1rem;
 }
 
-input, select{
+input:not(input[type="range"]), select{
     background: var(--secondary2);
     color: var(--text);
-    padding: 0.25rem;
     font-family: "OpenSans_Regular";
     font-size: 1rem;
+    padding: 0.25rem;
     border: 0.1rem solid var(--secondary4);
     border-radius: 0px;
     outline: none;
@@ -212,16 +212,16 @@ input.error {
     border-color: var(--error);
 }
 
-input:not(:disabled):hover,
+input:not(:disabled):not(input[type="range"]):hover,
 select:not(:disabled):hover,
 input[type="checkbox"]:not(:disabled):not(:checked)+label:hover::before {
     border-color: var(--accent2);
     transition: 0.3s;
 }
 
-input:not(:disabled):not([type="submit"]):focus,
+input:not(:disabled):not([type="submit"]):not(input[type="range"]):focus,
 select:not(:disabled):focus,
-input:not(:disabled):active,
+input:not(:disabled):not(input[type="range"]):active,
 select:not(:disabled):active {
     border-color: var(--accent);
     transition: 0.3s;
@@ -301,6 +301,12 @@ td {
 th {
     background: var(--secondary3);
     font-weight: normal;
+}
+
+th div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 table.main_table {
