--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -75,7 +75,7 @@ form span:not(:first-child) {
     margin-left: 0.5rem;
 }
 
-.param_form select {
+.param_form select:not(:first-child) {
     margin-left: 0.25rem;
 }
 
